<resources>
    <string name="app_name">Kotlin-Room</string>
    <string name="label_editar_informacoes">Editar infomações</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_age">Age</string>
    <string name="label_email">E-mail</string>
    <string name="label_phone">Phone</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_add_contact">Add contact</string>
    <string name="label_contacts">Contacts</string>
</resources>
